learning some html basics

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-"Website for Jakub Taraska's Github profile.\n
-Work in progress."
+"Website for Jakub Taraska's Github profile."
+"Work in progress."
