learning some html basics

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-"Website for Jakub Taraska's Github profile."
-"Work in progress."
+<h1>Website for Jakub Taraska's Github profile.<h1>
+<h2>Work in progress.<h2>
