added external css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
-<head>
-	<link rel="teststyles" href="testexternal.css">
-</head>
 
+<head>
+	<link rel="testexternal" href="testexternal.css">
+</head>
 
 <body>
 	<h1>Website for Jakub Taraska's Github profile.</h1>
