added external css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link rel="testexternal" href="testexternal.css">
+	<link rel="stylesheet" href="testexternal.css">
 </head>
 
 <body>
