added empty links

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			<div class="dropdown">
 			<button onclick="myFunction()" class="dropbtn">Projects</button>
 			  <div id="myDropdown" class="dropdown-content">
-			    <a href="#">C++</a>
-			    <a href="#">Python</a>
-			    <a href="#">HTML/CSS</a>
-			    <a href="#">Lua</a>
-			    <a href="#">Logic</a>
+			    <a href="projects.html">C++</a>
+			    <a href="projects.html">Python</a>
+			    <a href="projects.html">HTML/CSS</a>
+			    <a href="projects.html">Lua</a>
+			    <a href="projects.html">Logic</a>
 			  </div>
 			</div>
 		<a href="contact.html">Contact Me</a>
