--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 
 	<script>
 	function myFunction(){
-		document.getElementById("myDropdown").classList.toggle("show");
+		document.getElementById("sidedrop").classList.toggle("show");
 	}
 	</script>
 
 	<div id="mySidenav" class="sidenav">
 		<a href="index.html">Home</a>
-			<div class="dropdown">
-			<button onclick="myFunction()" class="dropbtn">Projects</button>
-			  <div id="myDropdown" class="dropdown-content">
-			    <a href="projects.html">C++</a>
-			    <a href="projects.html">Python</a>
-			    <a href="projects.html">HTML/CSS</a>
-			    <a href="projects.html">Lua</a>
-			    <a href="projects.html">Logic</a>
-			  </div>
+		<div class="side-dropdown">
+			<button onclick="myFunction()" class="side-drop">Projects</button>
+				<div id="sidedrop" class="side-dropdown-content">
+		    		<a href="projects.html">C++</a>
+		    		<a href="projects.html">Python</a>
+		    		<a href="projects.html">HTML/CSS</a>
+		    		<a href="projects.html">Lua</a>
+					<a href="projects.html">Logic</a>
+				</div>
 			</div>
 		<a href="contact.html">Contact Me</a>
 	</div>
-
+	
 	<h1>Website for Jakub Taraska's Github profile.</h1>
 	<h2>Work in progress.</h2>
 
