--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 	<script>
-	function myFunction(){
+	function ToggleDrop(){
 		document.getElementById("sidedrop").classList.toggle("show");
 	}
 	</script>
@@ -18,7 +18,7 @@
 	<div id="mySidenav" class="sidenav">
 		<a href="index.html">Home</a>
 		<div class="side-dropdown">
-			<button onclick="myFunction()" class="side-drop">Projects</button>
+			<button onclick="ToggleDrop()" class="side-drop">Projects</button>
 				<div id="sidedrop" class="side-dropdown-content">
 		    		<a href="projects.html">C++</a>
 		    		<a href="projects.html">Python</a>
