--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 
 	<script>
-	function myFunction(){
+	function ToggleDrop(){
 		document.getElementById("sidedrop").classList.toggle("show");
 	}
 	</script>
@@ -21,7 +21,7 @@
 	<div id="mySidenav" class="sidenav">
 		<a href="index.html">Home</a>
 		<div class="side-dropdown">
-			<button onclick="myFunction()" class="side-drop">Projects</button>
+			<button onclick="ToggleDrop()" class="side-drop">Projects</button>
 				<div id="sidedrop" class="side-dropdown-content">
 		    		<a href="projects.html">C++</a>
 		    		<a href="projects.html">Python</a>
