--- a/index.html
+++ b/index.html
@@ -9,33 +9,42 @@
 </head>
 
 <body>
-
-
-
-	<script>
-	function ToggleDrop(){
-		document.getElementById("sidedrop").classList.toggle("show");
-	}
-	</script>
-
 	<div id="mySidenav" class="sidenav">
 		<a href="index.html">Home</a>
-		<div class="side-dropdown">
-			<button onclick="ToggleDrop()" class="side-drop">Projects</button>
-				<div id="sidedrop" class="side-dropdown-content">
-		    		<a href="projects.html">C++</a>
-		    		<a href="projects.html">Python</a>
-		    		<a href="projects.html">HTML/CSS</a>
-		    		<a href="projects.html">Lua</a>
-					<a href="projects.html">Logic</a>
-				</div>
+		<button class="accordion2">Projects</button>
+			<div class="panel2">
+				<a href="projects.html#all">All</a>
+				<a href="projects.html#C++">C++</a>
+		    	<a href="projects.html#Python">Python</a>
+		    	<a href="projects.html#HTML">HTML/CSS</a>
+		    	<a href="projects.html#Lua">Lua</a>
+				<a href="projects.html#Logic">Logic</a>
 			</div>
 		<a href="contact.html">Contact Me</a>
 	</div>
 
+
 	<h1>Website for Jakub Taraska's Github profile.</h1>
 	<h2>Work in progress.</h2>
+	<script>
+	function AccordionSetUp2(){
+		var acc = document.getElementsByClassName("accordion2");
+		var i;
 
+		for (i = 0; i < acc.length; i++) {
+		  acc[i].addEventListener("click", function() {
+		    this.classList.toggle("active2");
+		    var panel = this.nextElementSibling;
+		    if (panel.style.maxHeight){
+		      panel.style.maxHeight = null;
+		    } else {
+		      panel.style.maxHeight = panel.scrollHeight + "px";
+		    } 
+		  });
+		}
+	}
+	AccordionSetUp2()
+	</script>
 </body>	
 
 
