--- a/projects.html
+++ b/projects.html
@@ -9,31 +9,103 @@
 </head>
 
 <body>
-	<script>
-	function ToggleDrop(){
-		document.getElementById("sidedrop").classList.toggle("show");
-	}
-	</script>
-
 	<div id="mySidenav" class="sidenav">
 		<a href="index.html">Home</a>
-		<div class="side-dropdown">
-			<button onclick="ToggleDrop()" class="side-drop">Projects</button>
-				<div id="sidedrop" class="side-dropdown-content">
-		    		<a href="projects.html">C++</a>
-		    		<a href="projects.html">Python</a>
-		    		<a href="projects.html">HTML/CSS</a>
-		    		<a href="projects.html">Lua</a>
-					<a href="projects.html">Logic</a>
-				</div>
+		<button class="accordion2">Projects</button>
+			<div class="panel2">
+				<a href="projects.html#all">All</a>
+				<a href="projects.html#C++">C++</a>
+		    	<a href="projects.html#Python">Python</a>
+		    	<a href="projects.html#HTML">HTML/CSS</a>
+		    	<a href="projects.html#Lua">Lua</a>
+				<a href="projects.html#Logic">Logic</a>
 			</div>
 		<a href="contact.html">Contact Me</a>
 	</div>
+
 
 	<h1>Projects Page</h1>
 	<h2>Work in progress.</h2>
 	<h2>Put in a big drop down menu that opens to the correct tab<h2>
 
+	<button id="#C++" class="accordion">C++</button>
+	<div class="panel">
+  	<p>First Proj</p>
+  	<p>asdasd</p>
+	</div>
+
+	<button id="#Python" class="accordion">Python</button>
+	<div class="panel">
+  	<p>First Proj</p>
+	</div>
+
+	<button id="#HTML" class="accordion">HTML/CSS</button>
+	<div class="panel">
+  	<p>First Proj</p>
+	</div>
+
+	<button id="#Lua" class="accordion">Lua</button>
+	<div class="panel">
+  	<p>First Proj</p>
+	</div>
+
+	<button id="#Logic" class="accordion">Logic</button>
+	<div class="panel">
+  	<p>First Proj</p>
+	</div>
+
+	<script>
+	function Onload(){
+		document.addEventListener('DOMContentLoaded', function(event){
+  			var target = window.location.hash; 
+  			if(target == "#all"){
+  				var allTabs = document.getElementsByClassName("accordion");
+  				for(i = 0; i < allTabs.length; i++){
+  					allTabs[i].click()
+  				}
+  			}else if (target != ""){
+  				document.getElementById(target).click();
+  			}
+		});
+	}
+
+	function AccordionSetUp(){
+		var acc = document.getElementsByClassName("accordion");
+		var i;
+
+		for (i = 0; i < acc.length; i++) {
+		  acc[i].addEventListener("click", function() {
+		    this.classList.toggle("active");
+		    var panel = this.nextElementSibling;
+		    if (panel.style.maxHeight){
+		      panel.style.maxHeight = null;
+		    } else {
+		      panel.style.maxHeight = panel.scrollHeight + "px";
+		    } 
+		  });
+		}
+	}
+	function AccordionSetUp2(){
+		var acc = document.getElementsByClassName("accordion2");
+		var i;
+
+		for (i = 0; i < acc.length; i++) {
+		  acc[i].addEventListener("click", function() {
+		    this.classList.toggle("active2");
+		    var panel = this.nextElementSibling;
+		    if (panel.style.maxHeight){
+		      panel.style.maxHeight = null;
+		    } else {
+		      panel.style.maxHeight = panel.scrollHeight + "px";
+		    } 
+		  });
+		}
+	}
+	Onload()
+	AccordionSetUp2()	
+	AccordionSetUp()
+	</script>
+	
 </body>	
 
 
