added project gallery v0.1

--- a/projects.html
+++ b/projects.html
@@ -30,28 +30,41 @@
 
 	<button id="#C++" class="accordion">C++</button>
 	<div class="panel">
-  	<p>First Proj</p>
-  	<p>asdasd</p>
+		<div class="cube_container">
+  			<img class="cube" src="pictures/matmult.png"></img>
+  			<div class="description">Matrix Multiplication Optimization</div>
+  		</div>
+  		<div class="cube_container">
+  			<img class="cube" src="pictures/hash.png"></img>
+  			<div class="description">Hashing Implementation Test</div>
+  		</div>
+  		<div class="cube_container">
+  			<img class="cube" src="pictures/graph1.png"></img>
+  			<div class="description">Djikstra's Algorithm Implementation</div>
+  		</div>
 	</div>
 
 	<button id="#Python" class="accordion">Python</button>
 	<div class="panel">
-  	<p>First Proj</p>
+  		<div class="cube"></div>
 	</div>
 
 	<button id="#HTML" class="accordion">HTML/CSS</button>
 	<div class="panel">
-  	<p>First Proj</p>
+  		<div class="cube"></div>
 	</div>
 
 	<button id="#Lua" class="accordion">Lua</button>
 	<div class="panel">
-  	<p>First Proj</p>
+  		<div class="cube"></div>
 	</div>
 
 	<button id="#Logic" class="accordion">Logic</button>
 	<div class="panel">
-  	<p>First Proj</p>
+  		<div class="cube_container">
+  			<img class="cube" src="pictures/kenken.png"></img>
+  			<div class="description">KenKen Satisfiability</div>
+  		</div>
 	</div>
 
 	<script>
