added gallery links to github

--- a/projects.html
+++ b/projects.html
@@ -31,15 +31,21 @@
 	<button id="#C++" class="accordion">C++</button>
 	<div class="panel">
 		<div class="cube_container">
-  			<img class="cube" src="pictures/matmult.png"></img>
+			<a href="https://github.com/Jkb6873/School-Work/tree/master/ChainMatrixMultiplication">
+  				<img class="cube" src="pictures/matmult.png"></img>
+  			</a>
   			<div class="description">Matrix Multiplication Optimization</div>
   		</div>
   		<div class="cube_container">
-  			<img class="cube" src="pictures/hash.png"></img>
+  			<a href="https://github.com/Jkb6873/School-Work/tree/master/HashingImplementations">
+  				<img class="cube" src="pictures/hash.png"></img>
+  			</a>
   			<div class="description">Hashing Implementation Test</div>
   		</div>
   		<div class="cube_container">
-  			<img class="cube" src="pictures/graph1.png"></img>
+  			<a href="https://github.com/Jkb6873/School-Work/tree/master/DjikstraTest">
+  				<img class="cube" src="pictures/graph1.png"></img>
+  			</a>
   			<div class="description">Djikstra's Algorithm Implementation</div>
   		</div>
 	</div>
@@ -62,7 +68,9 @@
 	<button id="#Logic" class="accordion">Logic</button>
 	<div class="panel">
   		<div class="cube_container">
-  			<img class="cube" src="pictures/kenken.png"></img>
+  			<a href="https://github.com/Jkb6873/School-Work/tree/master/KenkenSMT">
+  				<img class="cube" src="pictures/kenken.png"></img>
+  			</a>
   			<div class="description">KenKen Satisfiability</div>
   		</div>
 	</div>
