--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 	<h1>Website for Jakub Taraska's Github profile.</h1>
 	<h2>Work in progress.</h2>
+
 	<script>
 	function AccordionSetUp2(){
 		var acc = document.getElementsByClassName("accordion2");
@@ -39,11 +40,11 @@
 		      panel.style.maxHeight = null;
 		    } else {
 		      panel.style.maxHeight = panel.scrollHeight + "px";
-		    } 
+		    }
 		  });
 		}
 	}
-	AccordionSetUp2()
+	AccordionSetUp2();
 	</script>
 </body>	
 
