Centered headers with flexbox

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
 		<a href="contact.html">Contact Me</a>
 	</div>
 
-	<h1>Contact Information</h1>
-	<h2>Work in progress</h2>
+	<h1 class = "header">Contact Information</h1>
+	<h2 class = "header">Work in progress</h2>
 	<script>
 	function AccordionSetUp2(){
 		var acc = document.getElementsByClassName("accordion2");
@@ -38,13 +38,13 @@
 		      panel.style.maxHeight = null;
 		    } else {
 		      panel.style.maxHeight = panel.scrollHeight + "px";
-		    } 
+		    }
 		  });
 		}
 	}
 	AccordionSetUp2()
 	</script>
-</body>	
+</body>
 
 
 </html>
