--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	</div>
 
 
-	<h1>Website for Jakub Taraska's Github profile.</h1>
-	<h2>Work in progress.</h2>
+	<h1 class="header">Website for Jakub Taraska's Github profile.</h1>
+	<h2 class="header">Work in progress.</h2>
 
 	<script>
 	function AccordionSetUp2(){
@@ -46,7 +46,7 @@
 	}
 	AccordionSetUp2();
 	</script>
-</body>	
+</body>
 
 
 </html>
